--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/exercicio/style.css
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-4-css-flexbox-parte-2/exercicio/style.css
@@ -49,3 +49,76 @@
     list-style: none;
     margin-right: 10px;
   }
+
+  .main-container {
+    display: flex;
+    flex-wrap: wrap;
+   
+    align-items: center;
+    
+    justify-content: space-around;
+    
+  
+    
+    
+  }
+  
+  .movie-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+  }
+  
+  .movie-container h2 {
+    margin: 40px 0;
+    text-align: center;
+  }
+  
+  .card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 700px;
+  }
+  
+  .card-container div {
+    align-items: center;
+    background-color: #5C687C;
+    border: black solid 1px;
+    display: flex;
+    height: 150px;
+    justify-content: center;
+    margin: 10px;
+    width: 16%;
+    justify-content: space-around;
+
+    
+    
+    
+  }
+  
+  .aside-container {
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+    width: 350px;
+    
+    
+   
+    
+    
+  }
+  
+  .aside-container h3, h4 {
+    margin-bottom: 10px;
+    text-align: center;
+    
+    
+  }
+  
+  .aside-container p {
+    margin: 10px 0;
+    text-align: justify;
+    
+  }
